crates/ark/src/console/snapshots/ark__console__console_annotate__tests__annotate_input_shifted_character.snap
---
source: crates/ark/src/console_annotate.rs
expression: result
---
#line 1 "file:///test.R"
     x <- 1
y <- 2
