crates/ark/src/console/snapshots/ark__console__console_annotate__tests__annotate_input_with_existing_comment.snap
---
source: crates/ark/src/console_annotate.rs
expression: result
---
#line 1 "file:///test.R"
# comment
x <- 1
