crates/ark/src/console/snapshots/ark__console__console_annotate__tests__annotate_notebook_breakpoint_on_closing_brace_invalid.snap
---
source: crates/ark/src/console/console_annotate.rs
expression: result
---
{
#line 1 "file:///cell.R"
f <- function() {
  x <- 1
}
y <- 2
}
