crates/ark/src/console/snapshots/ark__console__console_annotate__tests__annotate_notebook_top_level_breakpoint.snap
---
source: crates/ark/src/console/console_annotate.rs
expression: result
---
{
#line 1 "file:///cell.R"
x <- 1
base::.ark_auto_step(base::.ark_breakpoint(browser(), "file:///cell.R", "1"))
#line 2 "file:///cell.R"
y <- 2
base::.ark_auto_step(base::.ark_verify_breakpoints_range("file:///cell.R", 2L, 3L))
#line 3 "file:///cell.R"
z <- x + y
}
