crates/ark/src/console/snapshots/ark__console__console_annotate__tests__inject_breakpoints_call_with_braced_arg.snap
---
source: crates/ark/src/console_annotate.rs
expression: result
---
#line 1 "file:///test.R"
{
base::.ark_auto_step(base::.ark_breakpoint(browser(), "file:///test.R", "1"))
#line 2 "file:///test.R"
  foo({ bar })
}
