crates/ark/src/console/snapshots/ark__console__console_annotate__tests__inject_breakpoints_in_brace_list.snap
---
source: crates/ark/src/console_annotate.rs
expression: result
---
#line 1 "file:///test.R"
f <- function() {
  x <- 1
base::.ark_auto_step(base::.ark_breakpoint(browser(), "file:///test.R", "1"))
#line 3 "file:///test.R"
  y <- 2
}
